--- a/.github/workflows/activity-box.yml
+++ b/.github/workflows/activity-box.yml
@@ -14,5 +14,5 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_USERNAME: JasonEtco
-          GIST_ID: 68c3458672047ec25e61a8af730181c3
+          GH_USERNAME: Zaid-maker
+          GIST_ID: c976d47b26e10c74bf4d3256a211998c
