--- a/codecov.yml
+++ b/codecov.yml
@@ -3,7 +3,7 @@ coverage:
     project:
       default:
         # Fail the status if coverage drops by >= 3%
-        threshold: 3
+        threshold: '3'
     patch:
       default:
         threshold: 3
