--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/JasonEtco/activity-box.git"
   },
   "dependencies": {
-    "actions-toolkit": "^4.0.0",
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "dotenv": "^8.2.0",
     "gist-box": "^0.3.1"
   },
